--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,10 @@ eggs/
 *.py[cod]
 __pycache__/
 .idea/
+
+# Installer logs
+pip-log.txt
+pip-delete-this-directory.txt
+
+# Data File
+Data/Lionbridgetracker.xlsx
